And another minor change

--- a/FlowModelDesktop/ExperimentMainWindow.xaml
+++ b/FlowModelDesktop/ExperimentMainWindow.xaml
@@ -152,7 +152,7 @@
             </TabItem>
             <TabItem Header="Проверка статистических гипотез">
                 <StackPanel>
-                    <GroupBox Header="Проверка гипотезы о нормальности распредления по критерию Пирсона">
+                    <GroupBox Header="Проверка гипотезы о нормальности распределения по критерию Пирсона">
                         <StackPanel>
                             <Label>Уровень значимости α = 0,05</Label>
                             <Grid>
